# pangflow

./: README.md  build.py  pyproject.toml
Package/: MANIFEST.in  requirements.txt  setup.py
Package/pangflow/: __init__.py
Package/pangflow/cli/: __init__.py  main.py
Package/pangflow/core/: __init__.py  runner.py  task.py
Package/pangflow/database/: __init__.py  connection.py  models.py  repository.py
Package/pangflow/prefect_integration/: client.py  flow_builder.py
Package/pangflow/templates/: README.md
Package/pangflow/utils/: toml_parser.py  workspace.py
pangflow/: __init__.py
pangflow/cli/: main.py
pangflow/core/: __init__.py  config.py  scheduler.py  state.py
pangflow/database/: __init__.py  connection.py  models.py  repository.py
pangflow/env/: __init__.py  conda_env.py  manager.py  spec.py
pangflow/examples/demo_project/: nodes.py  pangflow.db  pangflow.db-shm  pangflow.db-wal  pangflow.toml  service.py  sklearn_nodes.py  sklearn_service.py  sklearn_workflow.py  sklearn_workflow.toml  workflow.py  workflow.toml
pangflow/examples/demo_project/workflows/: example-inference.toml  example-training.toml
pangflow/execution/: __init__.py  conda.py  http_service.py  local.py  storage.py  strategy.py
pangflow/observer/: __init__.py  alert_observer.py  lineage_observer.py  log_observer.py  metric_observer.py  prefect_ui.py  subject.py
pangflow/orchestration/: __init__.py  compiler.py  dag.py  proxy.py  registry.py  serve_compiler.py
pangflow/prefect_integration/: __init__.py  deployment.py  flow_builder.py
pangflow/serve/: __init__.py  endpoint.py  flow_runner.py  manager.py  tracer.py
pangflow/storage/: __init__.py  backend.py  data_router.py  feature_store.py  log_store.py  manager.py  meta_store.py  model_store.py
pangflow/task/: __init__.py  base.py  factory.py  node_task.py  serve_task.py
pangflow/utils/: __init__.py  logger.py  workspace.py
pangflow/web/: __init__.py  api.py  server.py
pangflow/web/static/: index.html
webui/: index.html  package-lock.json  package.json  vite.config.ts
webui/src/: main.ts
webui/src/api/: client.ts
webui/src/components/: Header.ts  Layout.ts  Sidebar.ts
webui/src/pages/: Artifacts.ts  Dashboard.ts  Executions.ts  Lineage.ts  Models.ts  Settings.ts  Workflows.ts
(+14 files in other folders)
