[build-system]
requires = ["setuptools>=75.0", "wheel", "build"]
build-backend = "setuptools.build_meta"

[project]
name = "pangflow"
version = "0.3.1"
description = "PangFlow - An algorithm OPS orchestration tool based on Prefect with zero-friction DAG composition"
readme = "README.md"
license = {text = "Apache-2.0"}
requires-python = ">=3.13.5"
authors = [
    {name = "shihua", email = "15021408795@163.com"}
]
keywords = ["workflow", "orchestration", "prefect", "mlops", "algorithm", "ops"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: System :: Systems Administration",
]

dependencies = [
    "prefect==3.6.25",
    "fastapi==0.135.3",
    "uvicorn[standard]>=0.44.0",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.13.1",
    "SQLAlchemy>=2.0.49",
    "click>=8.3.2",
    "typer>=0.24.1",
    "tomli>=2.4.1",
    "tomli-w>=1.2.0",
    "rich>=14.3.3",
    "httpx>=0.28.1",
    "python-dotenv>=1.2.2",
    "packaging>=26.0",
    "cloudpickle>=3.1.2",
    "croniter>=6.2.2",
    "PyYAML>=6.0.3",
    "Jinja2>=3.1.6",
    "requests>=2.33.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "black>=24.0",
    "ruff>=0.6.0",
    "mypy>=1.10",
]
webui = [
    "npm; platform_system != 'Windows'",
]

[project.scripts]
pangflowctl = "pangflow.cli.main:cli"

[project.urls]
Homepage = "https://github.com/shihua/pangflow"
Documentation = "https://github.com/shihua/pangflow/blob/main/README.md"
Repository = "https://github.com/shihua/pangflow"

[tool.setuptools.packages.find]
where = ["."]
include = ["pangflow*"]
exclude = ["tests*", "webui*"]

[tool.setuptools.package-data]
pangflow = ["web/static/**/*", "templates/*", "examples/**/*"] 

[tool.black]
line-length = 100
target-version = ['py313']

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.mypy]
python_version = "3.13"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
